crates/squawk_linter/src/snapshots/squawk_linter__config__test_config__load_assume_in_transaction.snap
---
source: crates/squawk_linter/src/config.rs
assertion_line: 148
expression: "ConfigFile::parse(Some(squawk_toml.path().to_path_buf()))"
---
Ok(
    Some(
        ConfigFile {
            excluded_paths: [],
            excluded_rules: [],
            pg_version: None,
            assume_in_transaction: Some(
                false,
            ),
            upload_to_github: UploadToGitHubConfig {
                fail_on_violations: None,
            },
        },
    ),
)
