crates/squawk_linter/src/snapshots/squawk_linter__config__test_config__load_included_rules.snap
---
source: crates/squawk_linter/src/config.rs
expression: "ConfigFile::parse(Some(squawk_toml.path().to_path_buf()))"
---
Ok(
    Some(
        ConfigFile {
            excluded_paths: [],
            excluded_rules: [],
            included_rules: [
                RequireTableSchema,
            ],
            pg_version: None,
            assume_in_transaction: None,
            upload_to_github: UploadToGitHubConfig {
                fail_on_violations: None,
            },
        },
    ),
)
