crates/squawk_linter/src/snapshots/squawk_linter__config__test_config__load_pg_version.snap
---
source: crates/squawk_linter/src/config.rs
assertion_line: 118
expression: "ConfigFile::parse(Some(squawk_toml.path().to_path_buf()))"
---
Ok(
    Some(
        ConfigFile {
            excluded_paths: [],
            excluded_rules: [],
            pg_version: Some(
                Version {
                    major: 19,
                    minor: Some(
                        1,
                    ),
                    patch: None,
                },
            ),
            assume_in_transaction: None,
            upload_to_github: UploadToGitHubConfig {
                fail_on_violations: None,
            },
        },
    ),
)
